--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- TOGGLE MODE -->
+<!-- BOUTON MODE CLAIR / SOMBRE -->
 <button id="theme-toggle" aria-label="Changer le thème">🌙</button>
 
 <!-- HERO BANNER -->
@@ -24,19 +27,19 @@
     </div>
 </header>
 
-<!-- À PROPOS -->
+<!-- A PROPOS -->
 <section id="about" class="section">
     <h2>À propos</h2>
     <p class="center-text">
         Passionné par la <strong>Data Science</strong>, l’
         <strong>Intelligence Artificielle</strong> et le développement
         <strong>Python</strong> (Flask & Django).  
-        J’apprends par des <strong>projets concrets</strong> pour construire
-        des solutions utiles et professionnelles.
+        J’apprends par des <strong>projets concrets</strong> pour créer des
+        solutions utiles et professionnelles.
     </p>
 </section>
 
-<!-- COMPÉTENCES -->
+<!-- COMPETENCES -->
 <section id="skills" class="section alt">
     <h2>Compétences</h2>
     <div id="skills-container"></div>
@@ -54,14 +57,16 @@
         </div>
 
         <div class="project-card">
-            <h3>Gestion des employés avec Django</h3>
-            <p>Une application web de gestion d'employés.</p>
-            <a href="#">Voir le projet</a>
+            <h3>Gestion des employés (Django)</h3>
+            <p>Application web de gestion d’employés.</p>
+            <a href="https://projet-employe.onrender.com" target="_blank">Voir le projet</a>
         </div>
+
         <div class="project-card">
-            <h3>Maquette avec Figma</h3>
-            <p>Design UI/UX pour une application mobile d'infirmerie.</p>
-            <a href="#">Voir le projet</a>
+            <h3>Maquette UI/UX (Figma)</h3>
+            <p>Design d’une application mobile d’infirmerie.</p>
+            <a href="https://www.figma.com/proto/v4dPspH4Hk3oWbyJLjaUCC/Infirmerie?node-id=2-2&p=f&t=WnNz2UkIwGzRS7Vn-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank">Voir le projet</a>
+        </div>
     </div>
 </section>
 
@@ -69,16 +74,72 @@
 <section id="contact" class="section alt">
     <h2>Contact</h2>
 
-    <form class="contact-form">
-        <input type="text" placeholder="Nom" required>
-        <input type="email" placeholder="Email" required>
-        <textarea placeholder="Message" required></textarea>
+    <form
+        class="contact-form"
+        action="mailto:bancerobert6@gmail.com?subject=Message depuis le portfolio"
+        method="POST"
+        enctype="text/plain"
+        onsubmit="alert('Votre application mail va s’ouvrir pour envoyer le message.');"
+    >
+        <input type="text" name="Nom" placeholder="Nom" required>
+        <input type="email" name="Email" placeholder="Email" required>
+        <textarea name="Message" placeholder="Message" required></textarea>
         <button type="submit">Envoyer</button>
     </form>
 </section>
 
-<footer>
-    <p>© 2026 · Robert Bancé</p>
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer-content">
+
+        <!-- CONTACT -->
+        <div class="footer-section">
+            <h3>Contact</h3>
+
+            <p>
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:bancerobert6@gmail.com">
+                    bancerobert6@gmail.com
+                </a>
+            </p>
+
+            <p>
+                <i class="fab fa-whatsapp"></i>
+                <a href="https://wa.me/22667123596" target="_blank">
+                    +226 67 12 35 96
+                </a>
+            </p>
+
+            <p>
+                <i class="fas fa-phone"></i>
+                <span>+226 67 12 35 96 / +226 53 23 81 95</span>
+            </p>
+        </div>
+
+        <!-- RESEAUX -->
+        <div class="footer-section">
+            <h3>Réseaux</h3>
+
+            <div class="footer-socials">
+                <a href="https://github.com/TON_GITHUB" target="_blank" aria-label="GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
+
+                <a href="https://www.linkedin.com/in/TON_LINKEDIN" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+
+                <a href="https://www.facebook.com/TON_FACEBOOK" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="footer-bottom">
+        © 2026 · Robert Bancé — Tous droits réservés
+    </div>
 </footer>
 
 <script src="script.js"></script>
