Ajout de menu mobile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 <!-- BOUTON MODE CLAIR / SOMBRE -->
 <button id="theme-toggle" aria-label="Changer le thème">🌙</button>
 
+<!-- BOUTON MENU MOBILE -->
+<button id="menu-toggle" aria-label="Ouvrir le menu">
+    <i class="fas fa-bars"></i>
+</button>
+
 <!-- HERO -->
 <header id="hero" class="hero">
     <div class="overlay"></div>
