--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- MENU VERTICAL GAUCHE -->
 <nav class="sidebar">
-    <h2 class="logo">RB</h2>
+    <h2 class="logo">Robert Bancé</h2>
     <ul>
         <li><a href="#hero"><i class="fas fa-home"></i> Accueil</a></li>
         <li><a href="#about"><i class="fas fa-user"></i> À propos</a></li>
