--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- MENU VERTICAL -->
 <nav class="sidebar">
-    <h2 class="logo">Robert</h2>
+    <h2 class="logo">MonPortefolio</h2>
     <ul>
         <li><a href="#hero"><i class="fas fa-home"></i> Accueil</a></li>
         <li><a href="#about"><i class="fas fa-user"></i> À propos</a></li>
@@ -91,8 +91,8 @@
     <h2>Contact</h2>
 
     <form class="contact-form"
-          action="https://formspree.io/f/mdakpjle"
-          method="POST">
+        action="https://formspree.io/f/mdakpjle"
+        method="POST">
         <input type="text" name="name" placeholder="Nom" required>
         <input type="email" name="email" placeholder="Email" required>
         <textarea name="message" placeholder="Message" required></textarea>
