Mise à jour des liens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robert Bancé | Développeur Python & IA</title>
+    <title>Portfolio Robert Bancé</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
 <!-- MENU VERTICAL -->
 <nav class="sidebar">
-    <h2 class="logo">MonPortefolio</h2>
+    <h2 class="logo">Portfolio</h2>
     <ul>
         <li><a href="#hero"><i class="fas fa-home"></i> Accueil</a></li>
         <li><a href="#about"><i class="fas fa-user"></i> À propos</a></li>
@@ -103,10 +103,10 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="footer-socials">
-        <a href="https://github.com/TON_GITHUB" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/Robertbance" target="_blank" aria-label="GitHub">
             <i class="fab fa-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/TON_LINKEDIN" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/robert-bance-9023a6324/" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
         <a href="tel:+22667123596" aria-label="Téléphone">
